# polysolve

./: README.md  pyproject.toml
polysolve/: __init__.py  solver.py
