[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "Sathya", email = "sathya-sai.seetharaman@stfc.ac.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "Project to offer polynomial solvers for polynomials of order 2 and 3."
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["cowsay"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/XXX/polysolve"
Repository="https://github.com/XXX/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}
